# jvqplot

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  data.c  draw.c  dump-png.c  jvqplot.1  jvqplot.c  jvqplot.h  layout.c
examples/: circle.py  squares.py  wiggles.py
tools/: colors.c
